# RoseLauncher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddGameModal.tsx  DownloadManager.tsx  GameCard.tsx
src/lib/: types.ts
