[package]
name = "roselauncher"
version = "0.1.0"
edition = "2021"
description = "RoseLauncher · sleek Catppuccin-inspired game launcher"

[[bin]]
name = "roselauncher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [
  "dialog-open",
  "shell-open"
] }
thiserror = "1.0"
uuid = { version = "1.6", features = ["serde", "v4"] }
url = "2.5"
walkdir = "2.4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
